examples/tests/alias_bad.ma.output
error: examples/tests/alias_bad.ma:7:1

	Cannot assign type `B' to type `A'
	aa : A = b
	 -

