examples/tests/alias_bad.ma
type alias A = int
type alias B = int

a : A = 42
b : B = 123

aa : A = b